Images fixed rollover blurred!

--- a/css/longpage_new.css
+++ b/css/longpage_new.css
@@ -494,29 +494,29 @@ nav ul.menu li a:hover {
 	width:100%;
 }
 #Image1{
-	margin:30px;
+	margin:0px;
 }
 #Image2{
-	margin:30px;
+	margin:0px;
 }
 #Image3{
-	margin:30px;
+	margin:0px;
 }
 #Image4 {
-	margin:30px;
+	margin:0px;
 	
 }
 #Image5 {
-	margin:30px;
+	margin:0px;
 }
 #Image6 {
-	margin: 30px;
+	margin: 0px;
 }
 #Image7 {
-	margin: 30px;
+	margin: 0px;
 }
 #Image8 {
-	margin: 30px;
+	margin: 0px;
 }
 .comments {
 	width: 80%;
